syntax = "proto3";

package multiplayer.v1;

import "multiplayer/v1/common.proto";
import "multiplayer/v1/player.proto";

// The wrapper for all incoming/outgoing WebSocket messages
message GameMessage {
  GameMessageType type = 1;

  oneof payload {
    ChatMessage chat_message        = 2;
    PlayerEvent player_event        = 3;
    GameState   game_state          = 4;
    Announcement chat_announcement  = 5;
  }
}

// Discriminator for GameMessage
enum GameMessageType {
  GAME_MESSAGE_TYPE_UNSPECIFIED  = 0;
  GAME_MESSAGE_TYPE_CHAT_MESSAGE = 1;
  GAME_MESSAGE_TYPE_PLAYER_EVENT = 2;
  GAME_MESSAGE_TYPE_GAME_STATE   = 3;
  GAME_MESSAGE_TYPE_ANNOUNCEMENT = 4;
}

// Chat from a player
message ChatMessage {
  ID sender_id = 1;
  string text  = 2;
  int64 sent_at_unix = 3;
}

// Server announcements (join/leave/system messages)
message Announcement {
  string text = 1;
  int64 sent_at_unix = 2;
}

// Periodic snapshot of the entire game state (for syncing position drift)
message GameState {
  repeated PlayerState players = 1;
}

// Player details inside a GameState update
message PlayerState {
  ID player_id     = 1;
  Vector2 position = 2;
}
